# ProgrammingPracticeProjects

./: CMakeLists.txt  CMakeSettings.json  Practice projects.docx  README.md
Sorting/: BubbleSorting.cpp  BubbleSorting.h  CMakeLists.txt  InsertionSort.cpp  InsertionSort.h  MergeSort.h  OptimizedBubbleSorting.cpp  OptimizedBubbleSorting.h  OutPlaceMergeSort.cpp  OutPlaceMergeSort.h  Sorting.h
SortingTesting/: CMakeLists.txt  Main.cpp
constProject/: CMakeLists.txt  Main.cpp  PracticeClass.cpp  PracticeClass.h
stringProject/: CMakeLists.txt  Main.cpp  PracticeClass.cpp  PracticeClass.h
vectorProject/: CMakeLists.txt  Main.cpp  PracticeClass.cpp  PracticeClass.h
